data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2135.wast
;; 6. **Test Description**: Construct a `block` with an embedded `loop` having conditionally inappropriate stack unwinding involving `br` without proper operand consumption.    - **Constraint**: Verifies that operand stack balance prevents re-entering the loop incorrectly.

(assert_invalid
  (module
    (func $test-block-loop-condition
      (block $B (loop $L
        (br_if $L (i32.const 1))
        (i32.const 1) (drop)
      ))
    )
  )
  "type mismatch"
)